iterating through json to display teams and their divisions

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,1 +1,6 @@
- Welcome to SPORTS!!
+ Welcome to SPORTS!!<br><br>
+
+ <% @teams.each do |team| %>
+ <%= team["name"] %><br>
+ <%= team["division"]["name"] %><br><br>
+ <% end %>
