--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,6 +1,66 @@
  Welcome to SPORTS!!<br><br>
 
- <% @teams.each do |team| %>
- <%= team["name"] %><br>
- <%= team["division"]["name"] %><br><br>
- <% end %>
+
+<h1> AFC EAST </h1>
+<% @teams.each do |team| %>
+  <% if team["division"]["name"] == "AFC East"  %>
+    <%= team["name"] %><br>
+    <%= team["division"]["name"] %><br><br>
+  <% end %>
+<% end %>
+
+<h1> AFC NORTH </h1>
+  <% @teams.each do |team| %>
+    <% if team["division"]["name"] == "AFC North"  %>
+      <%= team["name"] %><br>
+      <%= team["division"]["name"] %><br><br>
+    <% end %>
+<% end %>
+
+<h1> AFC WEST </h1>
+<% @teams.each do |team| %>
+  <% if team["division"]["name"] == "AFC West"  %>
+    <%= team["name"] %><br>
+    <%= team["division"]["name"] %><br><br>
+  <% end %>
+<% end %>
+
+<h1> AFC SOUTH </h1>
+<% @teams.each do |team| %>
+  <% if team["division"]["name"] == "AFC South"  %>
+    <%= team["name"] %><br>
+    <%= team["division"]["name"] %><br><br>
+  <% end %>
+<% end %>
+
+<h1> NFC EAST </h1>
+<% @teams.each do |team| %>
+  <% if team["division"]["name"] == "NFC East"  %>
+    <%= team["name"] %><br>
+    <%= team["division"]["name"] %><br><br>
+  <% end %>
+<% end %>
+
+<h1> NFC NORTH </h1>
+<% @teams.each do |team| %>
+  <% if team["division"]["name"] == "NFC North"  %>
+    <%= team["name"] %><br>
+    <%= team["division"]["name"] %><br><br>
+  <% end %>
+<% end %>
+
+<h1> NFC WEST </h1>
+<% @teams.each do |team| %>
+  <% if team["division"]["name"] == "NFC West"  %>
+    <%= team["name"] %><br>
+    <%= team["division"]["name"] %><br><br>
+  <% end %>
+<% end %>
+
+<h1> NFC SOUTH </h1>
+<% @teams.each do |team| %>
+  <% if team["division"]["name"] == "NFC South"  %>
+    <%= team["name"] %><br>
+    <%= team["division"]["name"] %><br><br>
+  <% end %>
+<% end %>
