--- a/app/views/conferences/index.html.erb
+++ b/app/views/conferences/index.html.erb
@@ -1,3 +1,3 @@
 <% @conferences.each do |conference| %>
-  <%= conference["name"] %><br>
+  <%= link_to conference["name"], conference_path(conference["id"]) %><br>
 <% end %>
