--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -1,3 +1,3 @@
 <% @divisions.each do |division| %>
-  <%= division["name"] %><br>
+  <%= link_to division["name"], division_path(division["id"]) %><br>
 <% end %>
