added a very rough version of nav bar, all tests passing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= link_to "Home", root_path %>
+<%= link_to "Conferences", conferences_path %>
+<%= link_to "Divisions", divisions_path %>
+<%= link_to "Teams", teams_path %><br><br>
 
 <%= yield %>
 
