--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -2,65 +2,31 @@
 
 
 <h1> AFC EAST </h1>
-<% @teams.each do |team| %>
-  <% if team["division"]["name"] == "AFC East"  %>
-    <%= link_to team["name"], team_path(team["id"]) %><br>
-    <%= team["division"]["name"] %><br><br>
-  <% end %>
-<% end %>
+<%= render partial: 'team_by_division', locals: {div: 'AFC East'} %>
 
 <h1> AFC NORTH </h1>
-  <% @teams.each do |team| %>
-    <% if team["division"]["name"] == "AFC North"  %>
-      <%= link_to team["name"], team_path(team["id"]) %><br>
-      <%= team["division"]["name"] %><br><br>
-    <% end %>
-<% end %>
+<%= render partial: 'team_by_division', locals: {div: 'AFC North'} %>
+
 
 <h1> AFC WEST </h1>
-<% @teams.each do |team| %>
-  <% if team["division"]["name"] == "AFC West"  %>
-    <%= link_to team["name"], team_path(team["id"]) %><br>
-    <%= team["division"]["name"] %><br><br>
-  <% end %>
-<% end %>
+<%= render partial: 'team_by_division', locals: {div: 'AFC West'} %>
+
 
 <h1> AFC SOUTH </h1>
-<% @teams.each do |team| %>
-  <% if team["division"]["name"] == "AFC South"  %>
-    <%= link_to team["name"], team_path(team["id"]) %><br>
-    <%= team["division"]["name"] %><br><br>
-  <% end %>
-<% end %>
+<%= render partial: 'team_by_division', locals: {div: 'AFC South'} %>
+
 
 <h1> NFC EAST </h1>
-<% @teams.each do |team| %>
-  <% if team["division"]["name"] == "NFC East"  %>
-    <%= link_to team["name"], team_path(team["id"]) %><br>
-    <%= team["division"]["name"] %><br><br>
-  <% end %>
-<% end %>
+<%= render partial: 'team_by_division', locals: {div: 'NFC East'} %>
+
 
 <h1> NFC NORTH </h1>
-<% @teams.each do |team| %>
-  <% if team["division"]["name"] == "NFC North"  %>
-    <%= link_to team["name"], team_path(team["id"]) %><br>
-    <%= team["division"]["name"] %><br><br>
-  <% end %>
-<% end %>
+<%= render partial: 'team_by_division', locals: {div: 'NFC North'} %>
+
 
 <h1> NFC WEST </h1>
-<% @teams.each do |team| %>
-  <% if team["division"]["name"] == "NFC West"  %>
-    <%= link_to team["name"], team_path(team["id"]) %><br>
-    <%= team["division"]["name"] %><br><br>
-  <% end %>
-<% end %>
+<%= render partial: 'team_by_division', locals: {div: 'NFC West'} %>
+
 
 <h1> NFC SOUTH </h1>
-<% @teams.each do |team| %>
-  <% if team["division"]["name"] == "NFC South"  %>
-    <%= link_to team["name"], team_path(team["id"]) %><br>
-    <%= team["division"]["name"] %><br><br>
-  <% end %>
-<% end %>
+<%= render partial: 'team_by_division', locals: {div: 'NFC South'} %>
