players for each team are rendering on the appropriate team page, data is disappointing (LBs are listed as DB as are Safeties), need to test

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,11 @@
 <% @teams.each do |team| %>
   <% if team["id"].to_s == params["id"].to_s %>
-    <%= team["name"] %>
+    <%= team["name"] %><br>
+    <% @players.each do |player| %>
+      <% if player["team_id"].to_s == params["id"] %>
+        Player Name: <%= player["name"] %><br>
+        Position: <%= player["position"] %><br><br>
+      <% end %>
+    <% end %>
   <% end %>
 <% end %>
