--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -37,8 +37,10 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-9" "col-sm-4"><%= yield %></div>
-      <div class="col-md-3" "col-sm-4">
+      <div class="col-md-6 col-sm-6 col-xs-6"><%= yield %></div>
+      <div class="col-md-6 col-sm-6 col-xs-6">
+        <h2>Welcome to Sports!</h2>
+        This is a website that will keep you up to date with your favorite team's roster.  It leverages the data provided by another web application in the form of JSON.
         <h2>Welcome to Sports!</h2>
         This is a website that will keep you up to date with your favorite team's roster.  It leverages the data provided by another web application in the form of JSON.
       </div>
