--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,13 @@
     <div class="row">
       <div class="col-md-6 col-sm-6 col-xs-6"><%= yield %></div>
       <div class="col-md-6 col-sm-6 col-xs-6">
-        <h2>Welcome to Sports!</h2>
-        This is a website that will keep you up to date with your favorite team's roster.  It leverages the data provided by another web application in the form of JSON.
-        <h2>Welcome to Sports!</h2>
-        This is a website that will keep you up to date with your favorite team's roster.  It leverages the data provided by another web application in the form of JSON.
+        <div class="nfl-logo">
+          <img src="http://wp.vcu.edu/sportleadership/wp-content/uploads/sites/2790/2014/02/vector-nfl-logo-logo-2009730607.jpg"/>
+        </div>
+        <div class="site-desc">
+          <h2>Welcome to Sports!</h2>
+          This is a website that will keep you up to date with your favorite team's roster.  It leverages the data provided by another web application in the form of JSON.
+        </div>
       </div>
     </div>
   </div>
