added some css for home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,8 @@
   text-align: center;
   display: block;
 }
+
+.home-links a, .home-links h1, .home-links h3 {
+  text-align: center;
+  display: block;
+}
